# Sportive-Stats-HTTP-server

./: .gitignore  Makefile  README.md  archivate.sh  checker-result.txt  requirements.txt
.github/workflows/: CI-tests-method-py.yaml  CI-tests-method-rs.yaml
Restfox/: &#47;api&#47;get_results&#47;&lt;job_id&gt;.json  &#47;api&#47;graceful_shutdown.json  &#47;api&#47;jobs.json  &#47;api&#47;num_jobs.json  restfox.json
Restfox/&#47;api&#47;best5/: _.json  test-1.json  test-2.json  test-3.json  test-4.json  test-5.json  test-6.json  test-7.json  test-8.json  test-9.json
Restfox/&#47;api&#47;diff_from_mean/: test-1.json  test-2.json  test-3.json  test-4.json  test-5.json  test-6.json  test-7.json  test-8.json  test-9.json
Restfox/&#47;api&#47;global_mean/: _.json  test-1.json  test-2.json  test-3.json  test-4.json  test-5.json  test-6.json  test-7.json  test-8.json  test-9.json
Restfox/&#47;api&#47;mean_by_category/: test-1.json  test-2.json  test-3.json  test-4.json  test-5.json  test-6.json  test-7.json  test-8.json  test-9.json
Restfox/&#47;api&#47;worst5/: _.json  (+9 more)
app/: __init__.py  conurrent_hash_map.py  data_ingestor.py  job_type.py  logger.py  routes.py  task_runner.py
checker/: checker.py
method-py/: Makefile  api_server.py  checker-result.txt
method-rs/: Cargo.toml  README.md
method-rs/src/: app.rs  concurrent_hash_map.rs  data_ingestor.rs  logger.rs  main.rs  request_type.rs  routes.rs  thread_pool.rs
unittests/: README.md  TestWebserver.py  data_for_queries_on_question_and_state.csv  sample-data-multiple-states.csv  test_web_server.py
(+148 files in other folders)
