[package]
name = "method-rs"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "sportive-stats"
path = "./src/app.rs"


[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
csv = "1.3.1"
axum = "0.8.6"
tokio = { version = "1.47.1", features = ["full"] }
num_cpus = "1.17.0"
chrono = "0.4.42"
